Chapter7/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> KOTOBA ID func_start ENDSTMT declare startaux BEGIN func_begin_main block END func_end
Rule 2     start -> KOTOBA ID func_start ENDSTMT startaux BEGIN func_begin_main block END func_end
Rule 3     startaux -> function startaux
Rule 4     startaux -> empty
Rule 5     block -> OPENCURL blockaux CLOSECURL
Rule 6     blockaux -> action blockaux
Rule 7     blockaux -> empty
Rule 8     action -> input
Rule 9     action -> output
Rule 10    action -> statement
Rule 11    input -> READ OPENPAREN ID func_read CLOSEPAREN ENDSTMT
Rule 12    output -> WRITE OPENPAREN outputaux CLOSEPAREN ENDSTMT
Rule 13    outputaux -> expression func_print
Rule 14    outputaux -> expression func_print COMA outputaux
Rule 15    declare -> DEC decaux
Rule 16    decaux -> type ID func_declare_var declareaux
Rule 17    decaux -> type ID OPENBRAC func_isSize cte CLOSEBRAC func_declare_array declareaux
Rule 18    declareaux -> ENDSTMT
Rule 19    declareaux -> COMA decaux
Rule 20    assign -> SET ID func_constantID EQUAL func_assign assignaux
Rule 21    assign -> SET ID OPENBRAC NUMBERCTE CLOSEBRAC func_constantIDArray EQUAL func_assign assignaux
Rule 22    assignaux -> exp func_assign_value ENDSTMT
Rule 23    assignaux -> OPENCURL assiaux CLOSECURL ENDSTMT func_assign_array_end
Rule 24    assignaux -> callfunction func_assign_value
Rule 25    assiaux -> exp func_assign_array
Rule 26    assiaux -> exp func_assign_array COMA assiaux
Rule 27    cte -> ID func_constantID
Rule 28    cte -> ID OPENBRAC NUMBERCTE CLOSEBRAC func_constantIDArray
Rule 29    cte -> BOOLCTE func_boolCte func_constant
Rule 30    cte -> NUMBERCTE func_numberCte func_constant
Rule 31    cte -> WORDCTE func_wordCte func_constant
Rule 32    cte -> SENTENCECTE func_sentenceCte func_constant
Rule 33    type -> BOOL func_type
Rule 34    type -> NUMBER func_type
Rule 35    type -> WORD func_type
Rule 36    type -> SENTENCE func_type
Rule 37    statement -> assign
Rule 38    statement -> expression
Rule 39    statement -> condition
Rule 40    statement -> cycle
Rule 41    statement -> callfunction
Rule 42    statement -> returnaux
Rule 43    expression -> logexpression
Rule 44    expression -> NOT func_logicOp_operation logexpression func_logicOP
Rule 45    logexpression -> relopexpression
Rule 46    logexpression -> relopexpression AND func_logicOp_operation logexpression func_logicOP
Rule 47    logexpression -> relopexpression OR func_logicOp_operation logexpression func_logicOP
Rule 48    relopexpression -> exp
Rule 49    relopexpression -> exp func_relop RELOP func_relop_operation exp func_relop
Rule 50    exp -> term
Rule 51    exp -> term PLUS func_term_operation exp func_term
Rule 52    exp -> term MINUS func_term_operation exp func_term
Rule 53    term -> factor
Rule 54    term -> factor MULT func_factor_operation term func_factor
Rule 55    term -> factor DIV func_factor_operation term func_factor
Rule 56    factor -> OPENPAREN expression CLOSEPAREN
Rule 57    factor -> cte
Rule 58    condition -> IF OPENPAREN expression CLOSEPAREN func_if block func_endIf
Rule 59    condition -> IF OPENPAREN expression CLOSEPAREN func_if block ELSE func_else block func_endElse
Rule 60    cycle -> WHILE func_while OPENPAREN expression CLOSEPAREN func_whileExp block func_endWhile
Rule 61    cycle -> DO func_do block WHILE OPENPAREN expression CLOSEPAREN func_endDoWhile ENDSTMT
Rule 62    function -> FUNC funcaux ID func_declare_function OPENPAREN parameter CLOSEPAREN OPENCURL declare blockaux CLOSECURL
Rule 63    function -> FUNC funcaux ID func_declare_function OPENPAREN parameter CLOSEPAREN OPENCURL blockaux CLOSECURL
Rule 64    funcaux -> type
Rule 65    funcaux -> VOID func_type
Rule 66    parameter -> type ID func_declare_par parameteraux
Rule 67    parameter -> type ID OPENBRAC func_isSize cte CLOSEBRAC func_declare_array parameteraux
Rule 68    parameter -> empty
Rule 69    parameteraux -> COMA parameter
Rule 70    parameteraux -> empty
Rule 71    returnaux -> RETURN expression func_return ENDSTMT
Rule 72    callfunction -> CALL ID DOT special OPENPAREN spaux CLOSEPAREN func_callSpecial ENDSTMT
Rule 73    callfunction -> CALL ID func_callFunc OPENPAREN spaux CLOSEPAREN func_endCallFunction ENDSTMT
Rule 74    spaux -> cte func_callFuncParameter
Rule 75    spaux -> cte func_callFuncParameter COMA spaux
Rule 76    spaux -> empty
Rule 77    special -> LENGTH func_special
Rule 78    special -> FREQUENCY func_special
Rule 79    special -> SEARCH func_special
Rule 80    special -> EXISTS func_special
Rule 81    special -> MEAN func_special
Rule 82    special -> MEDIAN func_special
Rule 83    special -> MODE func_special
Rule 84    special -> WORDCOUNT func_special
Rule 85    special -> TOKENIZE func_special
Rule 86    special -> REMOVE func_special
Rule 87    special -> SORT func_special
Rule 88    empty -> <empty>
Rule 89    func_start -> <empty>
Rule 90    func_isSize -> <empty>
Rule 91    func_declare_var -> <empty>
Rule 92    func_declare_array -> <empty>
Rule 93    func_declare_par -> <empty>
Rule 94    func_declare_function -> <empty>
Rule 95    func_type -> <empty>
Rule 96    func_constant -> <empty>
Rule 97    func_constantID -> <empty>
Rule 98    func_constantIDArray -> <empty>
Rule 99    func_boolCte -> <empty>
Rule 100   func_numberCte -> <empty>
Rule 101   func_wordCte -> <empty>
Rule 102   func_sentenceCte -> <empty>
Rule 103   func_begin_main -> <empty>
Rule 104   func_read -> <empty>
Rule 105   func_print -> <empty>
Rule 106   func_assign -> <empty>
Rule 107   func_assign_value -> <empty>
Rule 108   func_assign_array -> <empty>
Rule 109   func_assign_array_end -> <empty>
Rule 110   func_term_operation -> <empty>
Rule 111   func_term -> <empty>
Rule 112   func_factor_operation -> <empty>
Rule 113   func_factor -> <empty>
Rule 114   func_relop_operation -> <empty>
Rule 115   func_relop -> <empty>
Rule 116   func_logicOp_operation -> <empty>
Rule 117   func_logicOP -> <empty>
Rule 118   func_if -> <empty>
Rule 119   func_endIf -> <empty>
Rule 120   func_else -> <empty>
Rule 121   func_endElse -> <empty>
Rule 122   func_do -> <empty>
Rule 123   func_endDoWhile -> <empty>
Rule 124   func_while -> <empty>
Rule 125   func_whileExp -> <empty>
Rule 126   func_endWhile -> <empty>
Rule 127   func_callFunc -> <empty>
Rule 128   func_callFuncParameter -> <empty>
Rule 129   func_endCallFunction -> <empty>
Rule 130   func_special -> <empty>
Rule 131   func_callSpecial -> <empty>
Rule 132   func_return -> <empty>
Rule 133   func_end -> <empty>

Terminals, with rules where they appear

AND                  : 46
BEGIN                : 1 2
BOOL                 : 33
BOOLCTE              : 29
CALL                 : 72 73
CLOSEBRAC            : 17 21 28 67
CLOSECURL            : 5 23 62 63
CLOSEPAREN           : 11 12 56 58 59 60 61 62 63 72 73
COMA                 : 14 19 26 69 75
DEC                  : 15
DIV                  : 55
DO                   : 61
DOT                  : 72
ELSE                 : 59
END                  : 1 2
ENDSTMT              : 1 2 11 12 18 22 23 61 71 72 73
EQUAL                : 20 21
EXISTS               : 80
FREQUENCY            : 78
FUNC                 : 62 63
ID                   : 1 2 11 16 17 20 21 27 28 62 63 66 67 72 73
IF                   : 58 59
KOTOBA               : 1 2
LENGTH               : 77
MEAN                 : 81
MEDIAN               : 82
MINUS                : 52
MODE                 : 83
MULT                 : 54
NOT                  : 44
NUMBER               : 34
NUMBERCTE            : 21 28 30
OPENBRAC             : 17 21 28 67
OPENCURL             : 5 23 62 63
OPENPAREN            : 11 12 56 58 59 60 61 62 63 72 73
OR                   : 47
PLUS                 : 51
READ                 : 11
RELOP                : 49
REMOVE               : 86
RETURN               : 71
SEARCH               : 79
SENTENCE             : 36
SENTENCECTE          : 32
SET                  : 20 21
SORT                 : 87
TOKENIZE             : 85
VOID                 : 65
WHILE                : 60 61
WORD                 : 35
WORDCOUNT            : 84
WORDCTE              : 31
WRITE                : 12
error                : 

Nonterminals, with rules where they appear

action               : 6
assiaux              : 23 26
assign               : 37
assignaux            : 20 21
block                : 1 2 58 59 59 60 61
blockaux             : 5 6 62 63
callfunction         : 24 41
condition            : 39
cte                  : 17 57 67 74 75
cycle                : 40
decaux               : 15 19
declare              : 1 62
declareaux           : 16 17
empty                : 4 7 68 70 76
exp                  : 22 25 26 48 49 49 51 52
expression           : 13 14 38 56 58 59 60 61 71
factor               : 53 54 55
func_assign          : 20 21
func_assign_array    : 25 26
func_assign_array_end : 23
func_assign_value    : 22 24
func_begin_main      : 1 2
func_boolCte         : 29
func_callFunc        : 73
func_callFuncParameter : 74 75
func_callSpecial     : 72
func_constant        : 29 30 31 32
func_constantID      : 20 27
func_constantIDArray : 21 28
func_declare_array   : 17 67
func_declare_function : 62 63
func_declare_par     : 66
func_declare_var     : 16
func_do              : 61
func_else            : 59
func_end             : 1 2
func_endCallFunction : 73
func_endDoWhile      : 61
func_endElse         : 59
func_endIf           : 58
func_endWhile        : 60
func_factor          : 54 55
func_factor_operation : 54 55
func_if              : 58 59
func_isSize          : 17 67
func_logicOP         : 44 46 47
func_logicOp_operation : 44 46 47
func_numberCte       : 30
func_print           : 13 14
func_read            : 11
func_relop           : 49 49
func_relop_operation : 49
func_return          : 71
func_sentenceCte     : 32
func_special         : 77 78 79 80 81 82 83 84 85 86 87
func_start           : 1 2
func_term            : 51 52
func_term_operation  : 51 52
func_type            : 33 34 35 36 65
func_while           : 60
func_whileExp        : 60
func_wordCte         : 31
funcaux              : 62 63
function             : 3
input                : 8
logexpression        : 43 44 46 47
output               : 9
outputaux            : 12 14
parameter            : 62 63 69
parameteraux         : 66 67
relopexpression      : 45 46 47
returnaux            : 42
spaux                : 72 73 75
special              : 72
start                : 0
startaux             : 1 2 3
statement            : 10
term                 : 50 51 52 54 55
type                 : 16 17 64 66 67

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . KOTOBA ID func_start ENDSTMT declare startaux BEGIN func_begin_main block END func_end
    (2) start -> . KOTOBA ID func_start ENDSTMT startaux BEGIN func_begin_main block END func_end

    KOTOBA          shift and go to state 1

    start                          shift and go to state 2

state 1

    (1) start -> KOTOBA . ID func_start ENDSTMT declare startaux BEGIN func_begin_main block END func_end
    (2) start -> KOTOBA . ID func_start ENDSTMT startaux BEGIN func_begin_main block END func_end

    ID              shift and go to state 3


state 2

    (0) S' -> start .



state 3

    (1) start -> KOTOBA ID . func_start ENDSTMT declare startaux BEGIN func_begin_main block END func_end
    (2) start -> KOTOBA ID . func_start ENDSTMT startaux BEGIN func_begin_main block END func_end
    (89) func_start -> .

    ENDSTMT         reduce using rule 89 (func_start -> .)

    func_start                     shift and go to state 4

state 4

    (1) start -> KOTOBA ID func_start . ENDSTMT declare startaux BEGIN func_begin_main block END func_end
    (2) start -> KOTOBA ID func_start . ENDSTMT startaux BEGIN func_begin_main block END func_end

    ENDSTMT         shift and go to state 5


state 5

    (1) start -> KOTOBA ID func_start ENDSTMT . declare startaux BEGIN func_begin_main block END func_end
    (2) start -> KOTOBA ID func_start ENDSTMT . startaux BEGIN func_begin_main block END func_end
    (15) declare -> . DEC decaux
    (3) startaux -> . function startaux
    (4) startaux -> . empty
    (62) function -> . FUNC funcaux ID func_declare_function OPENPAREN parameter CLOSEPAREN OPENCURL declare blockaux CLOSECURL
    (63) function -> . FUNC funcaux ID func_declare_function OPENPAREN parameter CLOSEPAREN OPENCURL blockaux CLOSECURL
    (88) empty -> .

    DEC             shift and go to state 6
    FUNC            shift and go to state 10
    BEGIN           reduce using rule 88 (empty -> .)

    function                       shift and go to state 9
    empty                          shift and go to state 8
    startaux                       shift and go to state 7
    declare                        shift and go to state 11

state 6

    (15) declare -> DEC . decaux
    (16) decaux -> . type ID func_declare_var declareaux
    (17) decaux -> . type ID OPENBRAC func_isSize cte CLOSEBRAC func_declare_array declareaux
    (33) type -> . BOOL func_type
    (34) type -> . NUMBER func_type
    (35) type -> . WORD func_type
    (36) type -> . SENTENCE func_type

    BOOL            shift and go to state 14
    NUMBER          shift and go to state 13
    WORD            shift and go to state 16
    SENTENCE        shift and go to state 12

    decaux                         shift and go to state 15
    type                           shift and go to state 17

state 7

    (2) start -> KOTOBA ID func_start ENDSTMT startaux . BEGIN func_begin_main block END func_end

    BEGIN           shift and go to state 18


state 8

    (4) startaux -> empty .

    BEGIN           reduce using rule 4 (startaux -> empty .)


state 9

    (3) startaux -> function . startaux
    (3) startaux -> . function startaux
    (4) startaux -> . empty
    (62) function -> . FUNC funcaux ID func_declare_function OPENPAREN parameter CLOSEPAREN OPENCURL declare blockaux CLOSECURL
    (63) function -> . FUNC funcaux ID func_declare_function OPENPAREN parameter CLOSEPAREN OPENCURL blockaux CLOSECURL
    (88) empty -> .

    FUNC            shift and go to state 10
    BEGIN           reduce using rule 88 (empty -> .)

    function                       shift and go to state 9
    startaux                       shift and go to state 19
    empty                          shift and go to state 8

state 10

    (62) function -> FUNC . funcaux ID func_declare_function OPENPAREN parameter CLOSEPAREN OPENCURL declare blockaux CLOSECURL
    (63) function -> FUNC . funcaux ID func_declare_function OPENPAREN parameter CLOSEPAREN OPENCURL blockaux CLOSECURL
    (64) funcaux -> . type
    (65) funcaux -> . VOID func_type
    (33) type -> . BOOL func_type
    (34) type -> . NUMBER func_type
    (35) type -> . WORD func_type
    (36) type -> . SENTENCE func_type

    VOID            shift and go to state 21
    BOOL            shift and go to state 14
    NUMBER          shift and go to state 13
    WORD            shift and go to state 16
    SENTENCE        shift and go to state 12

    funcaux                        shift and go to state 22
    type                           shift and go to state 20

state 11

    (1) start -> KOTOBA ID func_start ENDSTMT declare . startaux BEGIN func_begin_main block END func_end
    (3) startaux -> . function startaux
    (4) startaux -> . empty
    (62) function -> . FUNC funcaux ID func_declare_function OPENPAREN parameter CLOSEPAREN OPENCURL declare blockaux CLOSECURL
    (63) function -> . FUNC funcaux ID func_declare_function OPENPAREN parameter CLOSEPAREN OPENCURL blockaux CLOSECURL
    (88) empty -> .

    FUNC            shift and go to state 10
    BEGIN           reduce using rule 88 (empty -> .)

    function                       shift and go to state 9
    empty                          shift and go to state 8
    startaux                       shift and go to state 23

state 12

    (36) type -> SENTENCE . func_type
    (95) func_type -> .

    ID              reduce using rule 95 (func_type -> .)

    func_type                      shift and go to state 24

state 13

    (34) type -> NUMBER . func_type
    (95) func_type -> .

    ID              reduce using rule 95 (func_type -> .)

    func_type                      shift and go to state 25

state 14

    (33) type -> BOOL . func_type
    (95) func_type -> .

    ID              reduce using rule 95 (func_type -> .)

    func_type                      shift and go to state 26

state 15

    (15) declare -> DEC decaux .

    FUNC            reduce using rule 15 (declare -> DEC decaux .)
    BEGIN           reduce using rule 15 (declare -> DEC decaux .)
    READ            reduce using rule 15 (declare -> DEC decaux .)
    WRITE           reduce using rule 15 (declare -> DEC decaux .)
    SET             reduce using rule 15 (declare -> DEC decaux .)
    NOT             reduce using rule 15 (declare -> DEC decaux .)
    IF              reduce using rule 15 (declare -> DEC decaux .)
    WHILE           reduce using rule 15 (declare -> DEC decaux .)
    DO              reduce using rule 15 (declare -> DEC decaux .)
    CALL            reduce using rule 15 (declare -> DEC decaux .)
    RETURN          reduce using rule 15 (declare -> DEC decaux .)
    OPENPAREN       reduce using rule 15 (declare -> DEC decaux .)
    ID              reduce using rule 15 (declare -> DEC decaux .)
    BOOLCTE         reduce using rule 15 (declare -> DEC decaux .)
    NUMBERCTE       reduce using rule 15 (declare -> DEC decaux .)
    WORDCTE         reduce using rule 15 (declare -> DEC decaux .)
    SENTENCECTE     reduce using rule 15 (declare -> DEC decaux .)
    CLOSECURL       reduce using rule 15 (declare -> DEC decaux .)


state 16

    (35) type -> WORD . func_type
    (95) func_type -> .

    ID              reduce using rule 95 (func_type -> .)

    func_type                      shift and go to state 27

state 17

    (16) decaux -> type . ID func_declare_var declareaux
    (17) decaux -> type . ID OPENBRAC func_isSize cte CLOSEBRAC func_declare_array declareaux

    ID              shift and go to state 28


state 18

    (2) start -> KOTOBA ID func_start ENDSTMT startaux BEGIN . func_begin_main block END func_end
    (103) func_begin_main -> .

    OPENCURL        reduce using rule 103 (func_begin_main -> .)

    func_begin_main                shift and go to state 29

state 19

    (3) startaux -> function startaux .

    BEGIN           reduce using rule 3 (startaux -> function startaux .)


state 20

    (64) funcaux -> type .

    ID              reduce using rule 64 (funcaux -> type .)


state 21

    (65) funcaux -> VOID . func_type
    (95) func_type -> .

    ID              reduce using rule 95 (func_type -> .)

    func_type                      shift and go to state 30

state 22

    (62) function -> FUNC funcaux . ID func_declare_function OPENPAREN parameter CLOSEPAREN OPENCURL declare blockaux CLOSECURL
    (63) function -> FUNC funcaux . ID func_declare_function OPENPAREN parameter CLOSEPAREN OPENCURL blockaux CLOSECURL

    ID              shift and go to state 31


state 23

    (1) start -> KOTOBA ID func_start ENDSTMT declare startaux . BEGIN func_begin_main block END func_end

    BEGIN           shift and go to state 32


state 24

    (36) type -> SENTENCE func_type .

    ID              reduce using rule 36 (type -> SENTENCE func_type .)


state 25

    (34) type -> NUMBER func_type .

    ID              reduce using rule 34 (type -> NUMBER func_type .)


state 26

    (33) type -> BOOL func_type .

    ID              reduce using rule 33 (type -> BOOL func_type .)


state 27

    (35) type -> WORD func_type .

    ID              reduce using rule 35 (type -> WORD func_type .)


state 28

    (16) decaux -> type ID . func_declare_var declareaux
    (17) decaux -> type ID . OPENBRAC func_isSize cte CLOSEBRAC func_declare_array declareaux
    (91) func_declare_var -> .

    OPENBRAC        shift and go to state 33
    ENDSTMT         reduce using rule 91 (func_declare_var -> .)
    COMA            reduce using rule 91 (func_declare_var -> .)

    func_declare_var               shift and go to state 34

state 29

    (2) start -> KOTOBA ID func_start ENDSTMT startaux BEGIN func_begin_main . block END func_end
    (5) block -> . OPENCURL blockaux CLOSECURL

    OPENCURL        shift and go to state 35

    block                          shift and go to state 36

state 30

    (65) funcaux -> VOID func_type .

    ID              reduce using rule 65 (funcaux -> VOID func_type .)


state 31

    (62) function -> FUNC funcaux ID . func_declare_function OPENPAREN parameter CLOSEPAREN OPENCURL declare blockaux CLOSECURL
    (63) function -> FUNC funcaux ID . func_declare_function OPENPAREN parameter CLOSEPAREN OPENCURL blockaux CLOSECURL
    (94) func_declare_function -> .

    OPENPAREN       reduce using rule 94 (func_declare_function -> .)

    func_declare_function          shift and go to state 37

state 32

    (1) start -> KOTOBA ID func_start ENDSTMT declare startaux BEGIN . func_begin_main block END func_end
    (103) func_begin_main -> .

    OPENCURL        reduce using rule 103 (func_begin_main -> .)

    func_begin_main                shift and go to state 38

state 33

    (17) decaux -> type ID OPENBRAC . func_isSize cte CLOSEBRAC func_declare_array declareaux
    (90) func_isSize -> .

    ID              reduce using rule 90 (func_isSize -> .)
    BOOLCTE         reduce using rule 90 (func_isSize -> .)
    NUMBERCTE       reduce using rule 90 (func_isSize -> .)
    WORDCTE         reduce using rule 90 (func_isSize -> .)
    SENTENCECTE     reduce using rule 90 (func_isSize -> .)

    func_isSize                    shift and go to state 39

state 34

    (16) decaux -> type ID func_declare_var . declareaux
    (18) declareaux -> . ENDSTMT
    (19) declareaux -> . COMA decaux

    ENDSTMT         shift and go to state 40
    COMA            shift and go to state 41

    declareaux                     shift and go to state 42

state 35

    (5) block -> OPENCURL . blockaux CLOSECURL
    (6) blockaux -> . action blockaux
    (7) blockaux -> . empty
    (8) action -> . input
    (9) action -> . output
    (10) action -> . statement
    (88) empty -> .
    (11) input -> . READ OPENPAREN ID func_read CLOSEPAREN ENDSTMT
    (12) output -> . WRITE OPENPAREN outputaux CLOSEPAREN ENDSTMT
    (37) statement -> . assign
    (38) statement -> . expression
    (39) statement -> . condition
    (40) statement -> . cycle
    (41) statement -> . callfunction
    (42) statement -> . returnaux
    (20) assign -> . SET ID func_constantID EQUAL func_assign assignaux
    (21) assign -> . SET ID OPENBRAC NUMBERCTE CLOSEBRAC func_constantIDArray EQUAL func_assign assignaux
    (43) expression -> . logexpression
    (44) expression -> . NOT func_logicOp_operation logexpression func_logicOP
    (58) condition -> . IF OPENPAREN expression CLOSEPAREN func_if block func_endIf
    (59) condition -> . IF OPENPAREN expression CLOSEPAREN func_if block ELSE func_else block func_endElse
    (60) cycle -> . WHILE func_while OPENPAREN expression CLOSEPAREN func_whileExp block func_endWhile
    (61) cycle -> . DO func_do block WHILE OPENPAREN expression CLOSEPAREN func_endDoWhile ENDSTMT
    (72) callfunction -> . CALL ID DOT special OPENPAREN spaux CLOSEPAREN func_callSpecial ENDSTMT
    (73) callfunction -> . CALL ID func_callFunc OPENPAREN spaux CLOSEPAREN func_endCallFunction ENDSTMT
    (71) returnaux -> . RETURN expression func_return ENDSTMT
    (45) logexpression -> . relopexpression
    (46) logexpression -> . relopexpression AND func_logicOp_operation logexpression func_logicOP
    (47) logexpression -> . relopexpression OR func_logicOp_operation logexpression func_logicOP
    (48) relopexpression -> . exp
    (49) relopexpression -> . exp func_relop RELOP func_relop_operation exp func_relop
    (50) exp -> . term
    (51) exp -> . term PLUS func_term_operation exp func_term
    (52) exp -> . term MINUS func_term_operation exp func_term
    (53) term -> . factor
    (54) term -> . factor MULT func_factor_operation term func_factor
    (55) term -> . factor DIV func_factor_operation term func_factor
    (56) factor -> . OPENPAREN expression CLOSEPAREN
    (57) factor -> . cte
    (27) cte -> . ID func_constantID
    (28) cte -> . ID OPENBRAC NUMBERCTE CLOSEBRAC func_constantIDArray
    (29) cte -> . BOOLCTE func_boolCte func_constant
    (30) cte -> . NUMBERCTE func_numberCte func_constant
    (31) cte -> . WORDCTE func_wordCte func_constant
    (32) cte -> . SENTENCECTE func_sentenceCte func_constant

    CLOSECURL       reduce using rule 88 (empty -> .)
    READ            shift and go to state 46
    WRITE           shift and go to state 60
    SET             shift and go to state 50
    NOT             shift and go to state 61
    IF              shift and go to state 55
    WHILE           shift and go to state 68
    DO              shift and go to state 43
    CALL            shift and go to state 70
    RETURN          shift and go to state 48
    OPENPAREN       shift and go to state 49
    ID              shift and go to state 64
    BOOLCTE         shift and go to state 45
    NUMBERCTE       shift and go to state 63
    WORDCTE         shift and go to state 44
    SENTENCECTE     shift and go to state 47

    returnaux                      shift and go to state 51
    callfunction                   shift and go to state 52
    statement                      shift and go to state 53
    input                          shift and go to state 54
    blockaux                       shift and go to state 57
    factor                         shift and go to state 58
    logexpression                  shift and go to state 59
    relopexpression                shift and go to state 62
    condition                      shift and go to state 65
    cycle                          shift and go to state 66
    term                           shift and go to state 67
    cte                            shift and go to state 69
    empty                          shift and go to state 56
    exp                            shift and go to state 71
    action                         shift and go to state 72
    output                         shift and go to state 73
    expression                     shift and go to state 74
    assign                         shift and go to state 75

state 36

    (2) start -> KOTOBA ID func_start ENDSTMT startaux BEGIN func_begin_main block . END func_end

    END             shift and go to state 76


state 37

    (62) function -> FUNC funcaux ID func_declare_function . OPENPAREN parameter CLOSEPAREN OPENCURL declare blockaux CLOSECURL
    (63) function -> FUNC funcaux ID func_declare_function . OPENPAREN parameter CLOSEPAREN OPENCURL blockaux CLOSECURL

    OPENPAREN       shift and go to state 77


state 38

    (1) start -> KOTOBA ID func_start ENDSTMT declare startaux BEGIN func_begin_main . block END func_end
    (5) block -> . OPENCURL blockaux CLOSECURL

    OPENCURL        shift and go to state 35

    block                          shift and go to state 78

state 39

    (17) decaux -> type ID OPENBRAC func_isSize . cte CLOSEBRAC func_declare_array declareaux
    (27) cte -> . ID func_constantID
    (28) cte -> . ID OPENBRAC NUMBERCTE CLOSEBRAC func_constantIDArray
    (29) cte -> . BOOLCTE func_boolCte func_constant
    (30) cte -> . NUMBERCTE func_numberCte func_constant
    (31) cte -> . WORDCTE func_wordCte func_constant
    (32) cte -> . SENTENCECTE func_sentenceCte func_constant

    ID              shift and go to state 64
    BOOLCTE         shift and go to state 45
    NUMBERCTE       shift and go to state 63
    WORDCTE         shift and go to state 44
    SENTENCECTE     shift and go to state 47

    cte                            shift and go to state 79

state 40

    (18) declareaux -> ENDSTMT .

    FUNC            reduce using rule 18 (declareaux -> ENDSTMT .)
    BEGIN           reduce using rule 18 (declareaux -> ENDSTMT .)
    READ            reduce using rule 18 (declareaux -> ENDSTMT .)
    WRITE           reduce using rule 18 (declareaux -> ENDSTMT .)
    SET             reduce using rule 18 (declareaux -> ENDSTMT .)
    NOT             reduce using rule 18 (declareaux -> ENDSTMT .)
    IF              reduce using rule 18 (declareaux -> ENDSTMT .)
    WHILE           reduce using rule 18 (declareaux -> ENDSTMT .)
    DO              reduce using rule 18 (declareaux -> ENDSTMT .)
    CALL            reduce using rule 18 (declareaux -> ENDSTMT .)
    RETURN          reduce using rule 18 (declareaux -> ENDSTMT .)
    OPENPAREN       reduce using rule 18 (declareaux -> ENDSTMT .)
    ID              reduce using rule 18 (declareaux -> ENDSTMT .)
    BOOLCTE         reduce using rule 18 (declareaux -> ENDSTMT .)
    NUMBERCTE       reduce using rule 18 (declareaux -> ENDSTMT .)
    WORDCTE         reduce using rule 18 (declareaux -> ENDSTMT .)
    SENTENCECTE     reduce using rule 18 (declareaux -> ENDSTMT .)
    CLOSECURL       reduce using rule 18 (declareaux -> ENDSTMT .)


state 41

    (19) declareaux -> COMA . decaux
    (16) decaux -> . type ID func_declare_var declareaux
    (17) decaux -> . type ID OPENBRAC func_isSize cte CLOSEBRAC func_declare_array declareaux
    (33) type -> . BOOL func_type
    (34) type -> . NUMBER func_type
    (35) type -> . WORD func_type
    (36) type -> . SENTENCE func_type

    BOOL            shift and go to state 14
    NUMBER          shift and go to state 13
    WORD            shift and go to state 16
    SENTENCE        shift and go to state 12

    decaux                         shift and go to state 80
    type                           shift and go to state 17

state 42

    (16) decaux -> type ID func_declare_var declareaux .

    FUNC            reduce using rule 16 (decaux -> type ID func_declare_var declareaux .)
    BEGIN           reduce using rule 16 (decaux -> type ID func_declare_var declareaux .)
    READ            reduce using rule 16 (decaux -> type ID func_declare_var declareaux .)
    WRITE           reduce using rule 16 (decaux -> type ID func_declare_var declareaux .)
    SET             reduce using rule 16 (decaux -> type ID func_declare_var declareaux .)
    NOT             reduce using rule 16 (decaux -> type ID func_declare_var declareaux .)
    IF              reduce using rule 16 (decaux -> type ID func_declare_var declareaux .)
    WHILE           reduce using rule 16 (decaux -> type ID func_declare_var declareaux .)
    DO              reduce using rule 16 (decaux -> type ID func_declare_var declareaux .)
    CALL            reduce using rule 16 (decaux -> type ID func_declare_var declareaux .)
    RETURN          reduce using rule 16 (decaux -> type ID func_declare_var declareaux .)
    OPENPAREN       reduce using rule 16 (decaux -> type ID func_declare_var declareaux .)
    ID              reduce using rule 16 (decaux -> type ID func_declare_var declareaux .)
    BOOLCTE         reduce using rule 16 (decaux -> type ID func_declare_var declareaux .)
    NUMBERCTE       reduce using rule 16 (decaux -> type ID func_declare_var declareaux .)
    WORDCTE         reduce using rule 16 (decaux -> type ID func_declare_var declareaux .)
    SENTENCECTE     reduce using rule 16 (decaux -> type ID func_declare_var declareaux .)
    CLOSECURL       reduce using rule 16 (decaux -> type ID func_declare_var declareaux .)


state 43

    (61) cycle -> DO . func_do block WHILE OPENPAREN expression CLOSEPAREN func_endDoWhile ENDSTMT
    (122) func_do -> .

    OPENCURL        reduce using rule 122 (func_do -> .)

    func_do                        shift and go to state 81

state 44

    (31) cte -> WORDCTE . func_wordCte func_constant
    (101) func_wordCte -> .

    MULT            reduce using rule 101 (func_wordCte -> .)
    DIV             reduce using rule 101 (func_wordCte -> .)
    PLUS            reduce using rule 101 (func_wordCte -> .)
    MINUS           reduce using rule 101 (func_wordCte -> .)
    RELOP           reduce using rule 101 (func_wordCte -> .)
    AND             reduce using rule 101 (func_wordCte -> .)
    OR              reduce using rule 101 (func_wordCte -> .)
    READ            reduce using rule 101 (func_wordCte -> .)
    WRITE           reduce using rule 101 (func_wordCte -> .)
    SET             reduce using rule 101 (func_wordCte -> .)
    NOT             reduce using rule 101 (func_wordCte -> .)
    IF              reduce using rule 101 (func_wordCte -> .)
    WHILE           reduce using rule 101 (func_wordCte -> .)
    DO              reduce using rule 101 (func_wordCte -> .)
    CALL            reduce using rule 101 (func_wordCte -> .)
    RETURN          reduce using rule 101 (func_wordCte -> .)
    OPENPAREN       reduce using rule 101 (func_wordCte -> .)
    ID              reduce using rule 101 (func_wordCte -> .)
    BOOLCTE         reduce using rule 101 (func_wordCte -> .)
    NUMBERCTE       reduce using rule 101 (func_wordCte -> .)
    WORDCTE         reduce using rule 101 (func_wordCte -> .)
    SENTENCECTE     reduce using rule 101 (func_wordCte -> .)
    CLOSECURL       reduce using rule 101 (func_wordCte -> .)
    CLOSEBRAC       reduce using rule 101 (func_wordCte -> .)
    ENDSTMT         reduce using rule 101 (func_wordCte -> .)
    CLOSEPAREN      reduce using rule 101 (func_wordCte -> .)
    COMA            reduce using rule 101 (func_wordCte -> .)

    func_wordCte                   shift and go to state 82

state 45

    (29) cte -> BOOLCTE . func_boolCte func_constant
    (99) func_boolCte -> .
